cmake_minimum_required(VERSION 3.13)

project(ProcGen2)

add_subdirectory("games/coinrun/")
add_subdirectory("games/jumper/")
add_subdirectory("games/chaser/")
add_subdirectory("games/caveflyer/")
add_subdirectory("games/bossfight/")
add_subdirectory("games/maze/")
add_subdirectory("games/climber/")
